# lehmann

./: .gitignore  CMakeLists.txt
src/: main.cu
src/core/: config.h
src/cuda/: Bank.cuh  Simulation.cu  Simulation.cuh
